--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       }
 
       .txt {
-        max-width: 500px;
+        max-width: 600px;
         display: inline-block;
         line-height: 25px;
+        text-align: justify;
       }
 
       img {
@@ -54,8 +55,9 @@
         top: 20px;
 /*         font-family: "Courier", sans-serif; */
         text-align: end;
-        background-color: rgba(255, 255, 255, 0.53);
-        line-height: 30px;
+        background-color: rgba(255, 255, 255, 0.65);
+        line-height: 40px;
+        text-shadow: 0px 0px 20px white;
       }
     </style>
   </head>
@@ -67,6 +69,7 @@
     <h1>
       About
     </h1>
+    
     <div class="txt">
       Hi, I'm Marina! <br> <br>
       I currently study Computer Science and
@@ -75,7 +78,7 @@
       fields of study, I'm fascinated
       by art, technology, and its various intersections.
       <br><br>
-      Through art, I strive to explore provocations
+      Through <span style="background-color: pink">art</span>, I strive to explore provocations
       in an endless, continuous manner. In many of my
       pieces, I explore opposing forces, such as
       the contrasting cultures
@@ -88,7 +91,7 @@
       my progress as an artist here, or take
       a glimpse into my sketchbooks here.
       <br><br>
-      In computer science, I am interested in human-computer
+      In <span style="background-color: pink">computer science</span>, I am interested in human-computer
       interaction, algorithmic determinism, and privacy.
       Of course, these topics blend into my art directions
       (you can see my installation on privacy here),
@@ -98,7 +101,13 @@
       age of the art industry in the light of
       growing digital art. 
       <br><br>
-      Outside of these fields, I have 
+      In addition to art and technology, I often find 
+      myself involved in publications, research, and 
+      translations. Notably, over the summer of 2022,
+      I researched the emergence of mycology (study 
+      of fungi) in Japan from the late 19th to early 20th
+      century with my research mentor Brad Bolman. You
+      can see my full resume with my other experiences here.
       <br><br>
       On a more personal note, I was born and raised in
       Atsugi, Japan, with roots in Tokyo, Okinawa, Southern
@@ -106,7 +115,7 @@
       high schools that fostered my curiosity in 
       computer science (notably Troy Tech in Fullerton, CA and 
       North Carolina School of Science and Mathematics
-      in Durham, NC), 
+      in Durham, NC), and I love cities with trains.
     </div>
 <br><br><br><br><br><br>
   </body>
