added home link

--- a/index.html
+++ b/index.html
@@ -59,11 +59,19 @@
         line-height: 40px;
         text-shadow: 0px 0px 20px white;
       }
+      a {
+        color: gray;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
     <div class="headers">
-      home | works | contact
+      <a href="https://takaramarina.github.io/marina/">home</a> | works | contact
       <br>
     </div>
     <h1>
