--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
   </head>
   <body>
     <div class="headers">
-      <a href="https://takaramarina.github.io/marina/">home</a> | works | contact
+      <a href="https://takaramarina.github.io/marina/">home</a> 
+      | <a href="https://takaramarina.github.io/works/">works</a> | contact
       <br>
     </div>
     <h1>
@@ -102,7 +103,9 @@
       In <span style="background-color: pink">computer science</span>, I am interested in human-computer
       interaction, algorithmic determinism, and privacy.
       Of course, these topics blend into my art directions
-      (you can see my installation on privacy here),
+      (you can see my installation on privacy 
+      <a href="https://takaramarina.github.io/foghouse/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">here</span></a>),
       and I also have specific interests that more explicitly
       relate to both art and technology, including
       generative art, creative coding, and the new
