--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
   <body>
     <div class="headers">
       <a href="https://takaramarina.github.io/marina/">home</a> 
-      | <a href="https://takaramarina.github.io/works/">works</a> | contact
+      | <a href="https://takaramarina.github.io/works/">works</a> 
+      | <a href="https://takaramarina.github.io/contact/">contact</a>
       <br>
     </div>
     <h1>
