--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       fields of study, I'm fascinated
       by art, technology, and its various intersections.
       <br><br>
-      Through <span style="background-color: pink">art</span>, I strive to explore provocations
+      Through <span style="background-color: pink">art</span>, 
+      I strive to explore provocations
       in an endless, continuous manner. In many of my
       pieces, I explore opposing forces, such as
       the contrasting cultures
@@ -97,11 +98,16 @@
       creation of form using light in American art
       vs lines in Japanese art, and how this connects
       to religious and cultural ideologies in each region.
-      You can see some of my projects here, scroll through 
-      my progress as an artist here, or take
+      You can see some of my projects 
+      <a href="https://takaramarina.github.io/works/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">here</span></a>,
+      scroll through 
+      my progress as an artist <a href="https://takaramarina.github.io/folklore/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">here</span></a>, or take
       a glimpse into my sketchbooks here.
       <br><br>
-      In <span style="background-color: pink">computer science</span>, I am interested in human-computer
+      In <span style="background-color: pink">computer science</span>,
+      I am interested in human-computer
       interaction, algorithmic determinism, and privacy.
       Of course, these topics blend into my art directions
       (you can see my installation on privacy 
