--- a/index.html
+++ b/index.html
@@ -98,21 +98,22 @@
       creation of form using light in American art
       vs lines in Japanese art, and how this connects
       to religious and cultural ideologies in each region.
-      You can see some of my projects 
+      You can see some of my  
       <a href="https://takaramarina.github.io/works/">
-        <span style="background-color: rgba(100, 255, 100, 0.6)">here</span></a>,
+        <span style="background-color: rgba(100, 255, 100, 0.6)">projects</span></a>,
       scroll through 
-      my progress as an artist <a href="https://takaramarina.github.io/folklore/">
-        <span style="background-color: rgba(100, 255, 100, 0.6)">here</span></a>, or take
-      a glimpse into my sketchbooks here.
+      my <a href="https://takaramarina.github.io/folklore/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">progress</span></a>
+       as an artist , or take
+      a glimpse into my sketchbooks.
       <br><br>
       In <span style="background-color: pink">computer science</span>,
       I am interested in human-computer
       interaction, algorithmic determinism, and privacy.
       Of course, these topics blend into my art directions
-      (you can see my installation on privacy 
+      (check out my privacy 
       <a href="https://takaramarina.github.io/foghouse/">
-        <span style="background-color: rgba(100, 255, 100, 0.6)">here</span></a>),
+        <span style="background-color: rgba(100, 255, 100, 0.6)">installation</span></a>),
       and I also have specific interests that more explicitly
       relate to both art and technology, including
       generative art, creative coding, and the new
@@ -121,8 +122,11 @@
       <br><br>
       In addition to art and technology, I often find 
       myself involved in publications, research, and 
-      translations. Notably, over the summer of 2022,
-      I researched the emergence of mycology (study 
+      digital marketing. Notably, over the summer of 2022,
+      I researched the emergence of 
+      <a href="https://takaramarina.github.io/mycology/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">mycology</span></a>
+       (study 
       of fungi) in Japan from the late 19th to early 20th
       century with my research mentor Brad Bolman. You
       can see my full resume with my other experiences here.
@@ -133,7 +137,8 @@
       high schools that fostered my curiosity in 
       computer science (notably Troy Tech in Fullerton, CA and 
       North Carolina School of Science and Mathematics
-      in Durham, NC), and I love cities with trains.
+      in Durham, NC), I translate words between Japanese
+      and English, and I love cities with trains.
     </div>
 <br><br><br><br><br><br>
   </body>
