small text edits

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       high schools that fostered my curiosity in 
       computer science (notably Troy Tech in Fullerton, CA and 
       North Carolina School of Science and Mathematics
-      in Durham, NC), I translate words between Japanese
-      and English, and I love cities with trains.
+      in Durham, NC), my phone background is obscured
+      by the Wikipedia widget, and I love cities with trains.
     </div>
 <br><br><br><br><br><br>
   </body>
