--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <style>
       h1 {
-        font-size: 60;
+        font-size: 60px;
         padding-top: 30px;
         animation-name: slide;
         animation-duration: 4s;
