--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       .headers {
         color: gray;
-        font-size: 20;
+        font-size: 20px;
         position: sticky;
         top: 20px;
 /*         font-family: "Courier", sans-serif; */
