--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
         <span style="background-color: rgba(100, 255, 100, 0.6)">mycology</span></a>
        (study 
       of fungi) in Japan from the late 19th to early 20th
-      century with my research mentor Brad Bolman. You
-      can see my full resume with my other experiences here.
+      century with my research mentor Brad Bolman. Feel free
+      to look at my <a href="https://takaramarina.github.io/resume/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">resume</span></a> with my full experiences!
       <br><br>
       On a more personal note, I was born and raised in
       Atsugi, Japan, with roots in Tokyo, Okinawa, Southern
