--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
       scroll through 
       my <a href="https://takaramarina.github.io/folklore/">
         <span style="background-color: rgba(100, 255, 100, 0.6)">progress</span></a>
-       as an artist , or take
-      a glimpse into my sketchbooks.
+       as an artist, or take
+      a glimpse into my <a href="https://takaramarina.github.io/sketchbook/">
+      <span style="background-color: rgba(100, 255, 100, 0.6)">sketchbooks</span></a>.
       <br><br>
       In <span style="background-color: pink">computer science</span>,
       I am interested in human-computer
