--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       Media Arts &amp Design at the University of
       Chicago. As you might imagine from my
       fields of study, I'm fascinated
-      by art, technology, and its various intersections.
+      by art, technology, and their various intersections.
       <br><br>
       Through <span style="background-color: pink">art</span>, 
-      I strive to explore provocations
-      in an endless, continuous manner. In many of my
+      I strive to combine elemental rhythms of various
+      media to create and question provocations. In many of my
       pieces, I explore opposing forces, such as
       the contrasting cultures
       of my two home countries, Japan and the United
