--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
         <span style="background-color: rgba(100, 255, 100, 0.6)">installation</span></a>),
       and I also have specific interests that more explicitly
       relate to both art and technology, including
-      generative art, creative coding, and the new
+      <a href="https://takaramarina.github.io/AI-classroom/">
+        <span style="background-color: rgba(100, 255, 100, 0.6)">generative art</span></a>, creative coding, and the new
       age of the art industry in the light of
       growing digital art. 
       <br><br>
