--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
       North Carolina School of Science and Mathematics
       in Durham, NC), my phone background is obscured
       by the Wikipedia widget, and I love cities with trains.
+      <br><br>
+      I'm still in the process of hand-coding this website
+      to learn more about front-end designs. I'd love
+      to hear feedback and advice on how to make the site
+      cleaner! Please feel free to contact me via the
+      contact page. 
     </div>
 <br><br><br><br><br><br>
   </body>
